--- a/googlestyle.css
+++ b/googlestyle.css
@@ -18,6 +18,7 @@ div h2 {
 }
 #un{
     width: 315px;
+    margin: 12px 0 0 2px;
 }
 #id{
     text-decoration: none;
@@ -70,7 +71,7 @@ input{
   .bye{
     position: relative;
     left: 14px;
-    bottom: 32px;
+    bottom: 28px;
   }
   input[type=text]:focus~.he {
     color: black;
@@ -84,7 +85,7 @@ input{
   }
   input[type=email]:focus~.bye{
     color: black;
-    bottom: 62px;
+    bottom: 60px;
     font-size: 14px;
   }
   input:focus~.js {
@@ -99,4 +100,10 @@ input{
   }
   a{
     border-radius: 5px;
+  }
+  input{
+      border-radius: 2px;
+      border-width: 1px;
+      border-style: solid;
+      border-color: #929191;
   }
